@@ -1,6 +1,9 @@
 package mate.academy.springintro.service.impl;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import mate.academy.springintro.dto.book.BookDto;
 import mate.academy.springintro.dto.book.BookSearchParameters;
@@ -8,6 +11,8 @@ import mate.academy.springintro.dto.book.CreateBookRequestDto;
 import mate.academy.springintro.exception.EntityNotFoundException;
 import mate.academy.springintro.mapper.BookMapper;
 import mate.academy.springintro.model.Book;
+import mate.academy.springintro.model.Category;
+import mate.academy.springintro.repository.CategoryRepository;
 import mate.academy.springintro.repository.book.BookRepository;
 import mate.academy.springintro.repository.book.BookSpecificationBuilder;
 import mate.academy.springintro.service.BookService;
@@ -22,19 +27,28 @@ public class BookServiceImpl implements BookService {
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
     private final BookSpecificationBuilder bookSpecificationBuilder;
+    private final CategoryRepository categoryRepository;
 
     @Override
     public BookDto save(CreateBookRequestDto requestDto) {
+        Category category = categoryRepository.findByName(requestDto.getCategoryName())
+                .orElseThrow(() -> new EntityNotFoundException("Category not found"));
+
         Book book = bookMapper.toModel(requestDto);
+        Set<Category> categories = new HashSet<>();
+        categories.add(category);
+        book.setCategories(categories);
         book = bookRepository.save(book);
         return bookMapper.toBookDto(book);
     }
 
+
     @Override
     public List<BookDto> findAll(Pageable pageable) {
-        return bookRepository.findAll(pageable).stream()
+        List<Book> books = bookRepository.findAll();
+        return books.stream()
                 .map(bookMapper::toBookDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -65,5 +79,13 @@ public class BookServiceImpl implements BookService {
         return bookRepository.findAll(bookSpecification).stream()
                 .map(bookMapper::toBookDto)
                 .toList();
+    }
+
+    @Override
+    public List<BookDto> findByCategoryId(Long categoryId) {
+        List<Book> books = bookRepository.findAllByCategoriesId(categoryId);
+        return books.stream()
+                .map(bookMapper::toBookDto)
+                .collect(Collectors.toList());
     }
 }
